# rs-primitives2rbat

./: Cargo.toml  README.md  doc-web.sh
examples/primitives2rbat/: Cargo.toml  primitives2rbat  run.sh
examples/primitives2rbat/src/: main.rs
src/: datatype.rs  lib.rs
src/conv/: sync.rs
src/conv/sync/: fs.rs
